--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
 
     <div class="wallet-address">
-        6AJcP7wuLwmRYLBNbi825wgguaPsWzPBEHcHndpRpump
+        asdsfdjfnsdkfdsf
     </div>
 
     <div class="tagline">
