--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <img src="https://i.hizliresim.com/7cs3o4w.png" alt="RUMBLE Logo" class="logo">
     
     <div class="message">
-        We started Rumble to champion free speech and empower content creators worldwide. Our platform has become a beacon of independent thought and authentic expression. Today, we're launching the RUMBLE token on Solana to further our mission of supporting creators and protecting digital freedom. All profits from this initiative will be reinvested in the Rumble ecosystem, enhancing our platform's capabilities and supporting our growing community of truth-seekers and content creators.
+        Rumble has been a game-changer for free speech and empowering creators all over the world. It's become a real hub for independent thought and authentic voices to be heard without fear of censorship. Now, with the launch of the RUMBLE token on Solana, it's clear they're doubling down on their mission to support creators and protect digital freedom. What’s even better is that all the profits from this initiative are going right back into the platform, helping it grow and improve, while continuing to support the community of truth-seekers and content creators.
     </div>
 
     <div class="wallet-address">
