--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
     </div>
 
     <div class="wallet-address">
-        asdsfdjfnsdkfdsf
+        DfZzgR9pKgZbu27AP6jEYEAqkGCnxAVCiswMdcHJpump
     </div>
 
     <div class="tagline">
-        Do it for the RUMBLE.
+        Do it for the FREE SPEECH.
     </div>
 </body>
 </html> 
